Site g├╝ncellendi - Per 24.07.2025 23:18

--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
     <!-- Header -->
     <div class="header">
         <h1>🌾 TarpoVizyon AI</h1>
-        <div class="subtitle">Tarım ve Hayvancılık Uzmanı</div>
+        <div class="subtitle">Tarım ve Hayvancılık Uzmanı - v2.0</div>
     </div>
 
     <!-- Main Content -->
