Fix: İframe mikrofon izinleri ve kullanım kılavuzu eklendi

--- a/widget.html
+++ b/widget.html
@@ -23,10 +23,11 @@
 </head>
 <body>
     <iframe 
-        src="https://tarpovizyonai.netlify.app/mobile-embed" 
+        src="https://tarpovizyon.netlify.app/mobile-embed.html" 
         class="widget-container"
         frameborder="0"
-        sandbox="allow-same-origin allow-scripts allow-forms allow-popups"
+        allow="microphone; camera; autoplay; encrypted-media; fullscreen"
+        sandbox="allow-same-origin allow-scripts allow-forms allow-popups allow-modals"
         referrerpolicy="no-referrer-when-downgrade">
     </iframe>
 </body>
